change clock to use moment js library, add setInterval

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     <nav class="navbar"></nav>
     <main class="main">
-      <div class="date"></div>
+      <div class="time"></div>
+
       <button class="btn">Description</button>
       <div class="description">
         <h2 class="title"></h2>
@@ -28,6 +29,7 @@
         <a href="https://api.nasa.gov/" target="_blankd">NASA APIs</a>
       </p>
     </footer>
+    <script src="lib/moment/moment.min.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
