move display style none of description box to hmtl file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="time"></div>
 
       <button class="btn">Description</button>
-      <div class="description">
+      <div class="description" style="display: none;">
         <h2 class="title"></h2>
         <p class="text"></p>
         <span class="cross">x</span>
