--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         >
       </p>
       <p class="nasa">
-        <a href="https://api.nasa.gov/" target="_blankd">NASA APIs</a>
+        <a href="https://apod.nasa.gov/apod/astropix.html" target="_blankd"
+          >NASA APIs</a
+        >
       </p>
     </footer>
     <script src="lib/moment/moment.min.js"></script>
