--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </p>
       <p class="nasa">
         <a href="https://apod.nasa.gov/apod/astropix.html" target="_blankd"
-          >NASA APIs</a
+          >NASA API</a
         >
       </p>
     </footer>
