--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <main class="main">
       <div class="time"></div>
 
-      <button class="btn">Description</button>
+      <button class="btn"></button>
       <div class="description" style="display: none;">
-        <h2 class="title"></h2>
         <p class="text"></p>
         <span class="cross">x</span>
       </div>
