--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav class="navbar"></nav>
     <main class="main">
       <div class="time"></div>
+      <div class="date"></div>
 
       <button class="btn">Description</button>
       <div class="description" style="display: none;">
