--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <main class="main">
+      <div class="video-container"></div>
       <div class="time"></div>
       <div class="date"></div>
 
